<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activity.ChatActivity">

    <!--    <Toolbar-->
    <!--        android:id="@+id/toolbar"-->
    <!--        android:layout_width="match_parent"-->
    <!--        android:layout_height="wrap_content"-->
    <!--        android:background="#82b1ff"-->
    <!--        app:layout_constraintEnd_toEndOf="parent"-->
    <!--        app:layout_constraintStart_toStartOf="parent"-->
    <!--        app:layout_constraintTop_toTopOf="parent">-->

    <LinearLayout
        android:id="@+id/ll1"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_50dp"
        android:background="#82b1ff"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:weightSum="10"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imgBack"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_weight="1"
            android:contentDescription="@string/todo"
            android:padding="@dimen/dimen_5dp"
            android:src="@drawable/ic_back" />

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/imgProfile"
            android:layout_width="@dimen/dimen_40dp"
            android:layout_height="@dimen/dimen_40dp"
            android:layout_weight="1"
            android:padding="@dimen/dimen_5dp"
            android:src="@drawable/user" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="6"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvUserName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dimen_5dp"
                android:text="@string/name"
                android:textColor="@color/black"
                android:textSize="@dimen/dimen_25sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/status"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dimen_5dp"
                android:text="@string/online" />
        </LinearLayout>

        <ImageView
            android:id="@+id/imgCall"
            android:layout_width="0dp"
            android:layout_height="@dimen/dimen_40dp"
            android:layout_marginStart="10dp"
            android:layout_weight="1"
            android:contentDescription="@string/todo"
            android:padding="@dimen/dimen_5dp"
            android:src="@drawable/ic_call" />

        <ImageView
            android:id="@+id/imgCamera"
            android:layout_width="0dp"
            android:layout_height="@dimen/dimen_40dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_weight="1"
            android:contentDescription="@string/todo"
            android:padding="@dimen/dimen_5dp"
            android:src="@drawable/ic_camera" />


    </LinearLayout>

    <!--    </Toolbar>-->

    <!--    <com.devlomi.record_view.RecordView-->
    <!--        android:id="@+id/recordView"-->
    <!--        android:layout_width="match_parent"-->
    <!--        android:layout_height="@dimen/dimen_50dp"-->
    <!--        android:layout_weight="1.8"-->
    <!--        android:visibility="gone"-->
    <!--        app:layout_constraintBottom_toTopOf="@+id/ll2"-->
    <!--        app:layout_constraintEnd_toEndOf="parent"-->
    <!--        app:layout_constraintHorizontal_bias="0.5"-->
    <!--        app:layout_constraintStart_toStartOf="parent"-->
    <!--        app:slide_to_cancel_arrow="@drawable/recv_ic_arrow"-->
    <!--        app:slide_to_cancel_arrow_color="@color/black"-->
    <!--        app:slide_to_cancel_text="Slide to cancel" />-->


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvChat"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/ll2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ll1" />

    <LinearLayout
        android:id="@+id/ll2"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_50dp"
        android:layout_marginStart="@dimen/dimen_5dp"
        android:layout_marginEnd="@dimen/dimen_5dp"
        android:background="@color/white"
        android:gravity="center"
        android:orientation="horizontal"
        android:paddingBottom="@dimen/dimen_5dp"
        android:visibility="visible"
        android:weightSum="2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <LinearLayout
            android:id="@+id/messageLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.8"
            android:orientation="horizontal"
            android:visibility="visible">

            <ImageView
                android:id="@+id/imgLink"
                android:layout_width="@dimen/dimen_40dp"
                android:layout_height="@dimen/dimen_40dp"
                android:contentDescription="@string/todo"
                android:padding="@dimen/dimen_5dp"
                android:src="@drawable/ic_link" />

            <ImageView
                android:id="@+id/imgChoosenImage"
                android:layout_width="@dimen/dimen_40dp"
                android:layout_height="@dimen/dimen_40dp"
                android:contentDescription="@string/todo"
                android:padding="@dimen/dimen_5dp"
                android:src="@drawable/ic_add_image" />

            <com.devlomi.record_view.RecordButton
                android:id="@+id/record_button"
                android:layout_width="@dimen/dimen_40dp"
                android:layout_height="@dimen/dimen_40dp"
                android:backgroundTint="@color/black"
                android:visibility="visible"
                app:mic_icon="@drawable/recv_ic_mic" />

            <EditText
                android:id="@+id/etMessage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="name"
                android:background="@drawable/input_background"
                android:backgroundTint="#FFDCD2D2"
                android:hint="@string/type_message"
                android:inputType="text"
                android:padding="@dimen/dimen_12dp"
                android:textColor="@color/colorText" />
        </LinearLayout>

        <ImageButton
            android:id="@+id/btnSendMessage"
            android:layout_width="0dp"
            android:layout_height="@dimen/dimen_40dp"
            android:layout_margin="5dp"
            android:layout_weight="0.2"
            android:background="@drawable/button_circle"
            android:contentDescription="@string/todo"
            android:scaleType="center"
            android:src="@drawable/ic_send" />


    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>